	* Do not try to call doIteration() on the reactor if it has already stopped

==== Core ====
	* Fix saving torrent state on fresh configs

==== Web ====
	* Fix changing of the allocation in the preferences.
	* Fix updating the Connection Manager when a host is added.
	* Add a `--fork` option to allow forking the webui to the background
	* Fix the statusbar menu limits

==== Misc ====
	* Add man pages for deluge-console, deluge-gtk and deluge-web

==== Extractor ====
	* Fix issue where the plugin would not stop extracting files after being disabled
	* Add option to create torrent name sub-folders in extract folder
  
=== Deluge 1.2.0_rc1 (07 October 2009) ===
==== Core ====
	* Implement new RPC protocol DelugeRPC replacing XMLRPC
	* Move to a twisted framework
	* Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
	* Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
	* Remove SignalReceiver
	* Implemented a cross-platform IPC method thus removing the DBUS dependency
	* Implement a "True" Classic Mode where there is no longer a separate daemon process
	* Add preferences option "Add torrent in paused state"
	* Add tracker icons to the Tracker column
	* Implement #259 show tooltip with country name in the peers tab
	* Add an error category to the tracker sidebar list
	* Add Find More Plugins button to Plugins preference page
	* Fix #518 remove header in add torrent dialog to save vertical space
	* Add a Cache preferences page to adjust cache settings and examine cache status
	* Add ability to rename files prior to adding them
	* Fix shutdown handler with GNOME session manager
	* Allow 4 MiB piece sizes when creating a torrent

==== ConsoleUI ====
	* Changed to use curses for a more interactive client

==== WebUI ====
	* Move over to using Twisted-Web for the webserver.
	* Move to only AJAX interface built upon Ext-JS.

==== Plugins ====
	* Add Scheduler plugin
	* Add Extractor plugin
