@@ -12,6 +12,8 @@
 	* Fix updating the Connection Manager when a host is added.
 	* Add a `--fork` option to allow forking the webui to the background
 	* Fix the statusbar menu limits
+	* Fix setting the torrent options via the options tab
+	* Fix the private flag in the options tab
 
 ==== Misc ====
 	* Add man pages for deluge-console, deluge-gtk and deluge-web
